Sección continuar viendo

--- a/usuario2.html
+++ b/usuario2.html
@@ -141,6 +141,38 @@
             </div>
         </section>
 
+        <section id="continue">
+            <div class="subtitulo">
+                <p>Continuar viendo</p>
+            </div>
+            <div class="container__continue">
+                <div class="movies">
+                    <span class="barra__horizontal hz-uno"></span>
+                    <img src="img/continuar-viendo/uno.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <span class="barra__horizontal hz-dos"></span>
+                    <img src="img/continuar-viendo/dos.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <span class="barra__horizontal hz-tres"></span>
+                    <img src="img/continuar-viendo/tres.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <span class="barra__horizontal hz-cuatro"></span>
+                    <img src="img/continuar-viendo/cuatro.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <span class="barra__horizontal hz-cinco"></span>
+                    <img src="img/continuar-viendo/cinco.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <span class="barra__horizontal hz-seis"></span>
+                    <img src="img/continuar-viendo/seis.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+            </div>
+        </section>
+
         <section id="action">
             <div class="subtitulo">
                 <p>De intriga y acción</p>
