Diseño de botones

--- a/usuario2.html
+++ b/usuario2.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="logo__small">
-            <img src="img/logoNetflix2.svg" alt="" width="50" height="45">
+            <a href="index.html"><img src="../img/logoNetflix2.svg" alt="" width="50" height="45"></a>
         </div>
 
         <div class="perfil__icons">
@@ -65,6 +65,7 @@
         <div class="items">
             <div class="mi__lista">
                 <i class="fas fa-plus"></i>
+                <i class="fas fa-check"></i>
                 <span>Mi lista</span>
             </div>
             <div class="boton__play">
@@ -72,8 +73,10 @@
                 <span>Reproducir</span>
             </div>
             <div class="info">
-                <i class="fas fa-info-circle"></i>
-                <span>Información</span>
+                <a href="paginas/panda.html">
+                    <i class="fas fa-info-circle"></i>
+                    <span>Información</span>
+                </a>
             </div>
         </div>
     </div>
@@ -324,6 +327,12 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        
+        <p><span>Sitio web desarrollado por Ronald Santamaría</span> - Sin fines comerciales, realizado únicamente para mostrar técnicas de desarrollo web y para ser incluido como pieza de portafolio. Todos los derechos de autor son propiedad de Netflix.</p>
+
+    </footer>
 
     <script src="menu.js"></script>
 
