--- a/usuario2.html
+++ b/usuario2.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="logo__small">
-            <a href="index.html"><img src="../img/logoNetflix2.svg" alt="" width="50" height="45"></a>
+            <a href="index.html"><img src="img/logoNetflix2.svg" alt="" width="50" height="45"></a>
         </div>
 
         <div class="perfil__icons">
