--- a/paginas/panda.html
+++ b/paginas/panda.html
@@ -16,7 +16,7 @@
     <title>Ver Kung Fu Panda 3</title>
 </head>
 <body>
-    <header class="container__menu">
+    <header class="container__menu fixed">
         <a href="../usuario2.html">
         <i class="fas fa-arrow-left"></i>
         </a>
@@ -29,13 +29,13 @@
     </header>
 
         <section class="banner__panda">
+            <video loop autoplay muted controls poster="../img/panda/banner1.jpeg" class="rell1">
+                <source src="../video/videopanda.mp4" type="video/mp4">
+                <source src="../video/videopanda.mp4" type="video/wav">
+                El navegador no puede reproducir el video.
+            </video>
             <!-- <img src="../img/panda/banner1.jpeg" alt=""> -->
             <div class="videorell">
-                <video loop autoplay muted controls poster="../img/panda/banner1.jpeg" class="rell1">
-                    <source src="../video/videopanda.mp4" type="video/mp4">
-                    <source src="../video/videopanda.mp4" type="video/wav">
-                    El navegador no puede reproducir el video.
-                </video>
                 <h2>Kung Fu Panda 3</h2>
             </div>
             
@@ -84,6 +84,161 @@
             </div>
         </section>
 
+        <section id="action">
+            <div class="subtitulo">
+                <p>De intriga y acción</p>
+            </div>
+            <div class="container__action">
+                <div class="movies">
+                    <img src="../img/accion/accion1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/accion/accion2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/accion/accion3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/accion/accion4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/accion/accion5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/accion/accion6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+            </div>
+        </section>
+
+        <section id="comedy">
+            <div class="subtitulo">
+                <p>Comedias</p>
+            </div>
+            <div class="container__comedy">
+                <div class="movies">
+                    <img src="../img/comedia/comedia1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/comedia/comedia2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/comedia/comedia3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/comedia/comedia4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/comedia/comedia5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/comedia/comedia6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/comedia/comedia7.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+            </div>
+        </section>
+
+        <section id="terror">
+            <div class="subtitulo">
+                <p>Películas de terror</p>
+            </div>
+            <div class="container__terror">
+                <div class="movies">
+                    <img src="../img/terror/terror1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/terror/terror2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/terror/terror3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/terror/terror4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/terror/terror5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/terror/terror6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/terror/terror7.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/terror/terror8.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+            </div>
+        </section>
+
+        <section id="anime">
+            <div class="subtitulo">
+                <p>Anime basadas en manga</p>
+            </div>
+            <div class="container__anime">
+                <div class="movies">
+                    <img src="../img/anime/anime1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/anime/anime2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/anime/anime3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/anime/anime4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/anime/anime5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/anime/anime6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/anime/anime7.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/anime/anime8.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+            </div>
+        </section>
+
+        <section id="comedias">
+            <div class="subtitulo">
+                <p>Comedias picantes</p>
+            </div>
+            <div class="container__comedias">
+                <div class="movies">
+                    <img src="../img/comedias/comedias1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/comedias/comedias2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/comedias/comedias3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/comedias/comedias4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/comedias/comedias5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/comedias/comedias6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/comedias/comedias7.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <img src="../img/comedias/comedias8.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+            </div>
+        </section>
+        
+
+
+        <!-- <div class="orange"></div> -->
+        <script src="menu2.js"></script>
 </body>
 
 </html>
