--- a/usuario2.html
+++ b/usuario2.html
@@ -69,8 +69,10 @@
                 <span>Mi lista</span>
             </div>
             <div class="boton__play">
-                <i class="fas fa-play"></i>
-                <span>Reproducir</span>
+                <a href="paginas/panda.html">
+                    <i class="fas fa-play"></i>
+                    <span>Reproducir</span>
+                </a>
             </div>
             <div class="info">
                 <a href="paginas/panda.html">
