--- a/usuario.html
+++ b/usuario.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="logo__small">
-            <img src="img/logoNetflix2.svg" alt="" width="50" height="45">
+            <a href="index.html"><img src="img/logoNetflix2.svg" alt="" width="50" height="45"></a>
         </div>
 
         <div class="perfil__icons">
@@ -65,15 +65,20 @@
         <div class="items">
             <div class="mi__lista">
                 <i class="fas fa-plus"></i>
+                <i class="fas fa-check"></i>
                 <span>Mi lista</span>
             </div>
             <div class="boton__play">
-                <i class="fas fa-play"></i>
-                <span>Reproducir</span>
+                <a href="paginas/panda.html">
+                    <i class="fas fa-play"></i>
+                    <span>Reproducir</span>
+                </a>
             </div>
             <div class="info">
-                <i class="fas fa-info-circle"></i>
-                <span>Información</span>
+                <a href="paginas/panda.html">
+                    <i class="fas fa-info-circle"></i>
+                    <span>Información</span>
+                </a>
             </div>
         </div>
     </div>
@@ -137,6 +142,38 @@
                 <div class="movies">
                     <svg id="rank-10" width="74" height="106" viewBox="0 0 140 154" class="svg-icon svg-icon-rank-10 top-10-rank"><path stroke="#fff" stroke-linejoin="square" stroke-width="4" d="M34.757 151.55h35.869V2.976L2 19.687v30.14l32.757-8.41v110.132zm105.53 3.45c12.394 0 23.097-3.12 32.163-9.353 9.093-6.25 16.11-15.047 21.066-26.43C198.5 107.766 201 94.196 201 78.5c0-15.698-2.5-29.266-7.484-40.716-4.955-11.384-11.973-20.18-21.066-26.431C163.384 5.119 152.681 2 140.287 2c-12.393 0-23.096 3.12-32.162 9.353-9.093 6.25-16.11 15.047-21.066 26.43-4.984 11.45-7.484 25.02-7.484 40.717 0 15.698 2.5 29.266 7.484 40.716 4.955 11.384 11.973 20.18 21.066 26.431 9.066 6.234 19.769 9.353 32.162 9.353zm0-31.368c-7.827 0-13.942-4.147-18.15-12.178-4.053-7.736-6.047-18.713-6.047-32.954s1.994-25.218 6.047-32.954c4.208-8.03 10.323-12.178 18.15-12.178 7.827 0 13.943 4.147 18.15 12.178 4.053 7.736 6.048 18.713 6.048 32.954s-1.995 25.218-6.047 32.954c-4.208 8.03-10.324 12.178-18.15 12.178z"></path></svg>
                     <img src="img/top10.jpeg" alt="rank1" width="74" height="108" class="img-movie">
+                </div>
+            </div>
+        </section>
+
+        <section id="continue">
+            <div class="subtitulo">
+                <p>Continuar viendo</p>
+            </div>
+            <div class="container__continue">
+                <div class="movies">
+                    <span class="barra__horizontal hz-uno"></span>
+                    <img src="img/continuar-viendo/uno.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <span class="barra__horizontal hz-dos"></span>
+                    <img src="img/continuar-viendo/dos.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <span class="barra__horizontal hz-tres"></span>
+                    <img src="img/continuar-viendo/tres.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <span class="barra__horizontal hz-cuatro"></span>
+                    <img src="img/continuar-viendo/cuatro.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <span class="barra__horizontal hz-cinco"></span>
+                    <img src="img/continuar-viendo/cinco.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                </div>
+                <div class="movies">
+                    <span class="barra__horizontal hz-seis"></span>
+                    <img src="img/continuar-viendo/seis.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
                 </div>
             </div>
         </section>
@@ -292,6 +329,12 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        
+        <p><span>Sitio web desarrollado por Ronald Santamaría</span> - Sin fines comerciales, realizado únicamente para mostrar técnicas de desarrollo web y para ser incluido como pieza de portafolio. Todos los derechos de autor son propiedad de Netflix.</p>
+
+    </footer>
 
     <script src="menu.js"></script>
 
