Agregando efectos canvas con bootstrap5

--- a/paginas/panda.html
+++ b/paginas/panda.html
@@ -90,22 +90,22 @@
             </div>
             <div class="container__action">
                 <div class="movies">
-                    <img src="../img/accion/accion1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/accion/accion1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/accion/accion2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/accion/accion2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/accion/accion3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/accion/accion3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/accion/accion4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/accion/accion4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/accion/accion5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/accion/accion5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/accion/accion6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/accion/accion6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
             </div>
         </section>
@@ -116,25 +116,25 @@
             </div>
             <div class="container__comedy">
                 <div class="movies">
-                    <img src="../img/comedia/comedia1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedia/comedia1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/comedia/comedia2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedia/comedia2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/comedia/comedia3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedia/comedia3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/comedia/comedia4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedia/comedia4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/comedia/comedia5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedia/comedia5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/comedia/comedia6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedia/comedia6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/comedia/comedia7.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedia/comedia7.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
             </div>
         </section>
@@ -145,28 +145,28 @@
             </div>
             <div class="container__terror">
                 <div class="movies">
-                    <img src="../img/terror/terror1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/terror/terror1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/terror/terror2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/terror/terror2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/terror/terror3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/terror/terror3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/terror/terror4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/terror/terror4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/terror/terror5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/terror/terror5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/terror/terror6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/terror/terror6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/terror/terror7.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/terror/terror7.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/terror/terror8.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/terror/terror8.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
             </div>
         </section>
@@ -177,28 +177,28 @@
             </div>
             <div class="container__anime">
                 <div class="movies">
-                    <img src="../img/anime/anime1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/anime/anime1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/anime/anime2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/anime/anime2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/anime/anime3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/anime/anime3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/anime/anime4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/anime/anime4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/anime/anime5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/anime/anime5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/anime/anime6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/anime/anime6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/anime/anime7.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/anime/anime7.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/anime/anime8.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/anime/anime8.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
             </div>
         </section>
@@ -209,28 +209,28 @@
             </div>
             <div class="container__comedias">
                 <div class="movies">
-                    <img src="../img/comedias/comedias1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedias/comedias1.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/comedias/comedias2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedias/comedias2.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/comedias/comedias3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedias/comedias3.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/comedias/comedias4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedias/comedias4.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/comedias/comedias5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedias/comedias5.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/comedias/comedias6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedias/comedias6.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/comedias/comedias7.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedias/comedias7.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
                 <div class="movies">
-                    <img src="../img/comedias/comedias8.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluid">
+                    <img src="../img/comedias/comedias8.jpeg" alt="rank2" width="241" height="136" class="img-movie img-fluido">
                 </div>
             </div>
         </section>
