Modificaciones para canvas -pruebas-

--- a/paginas/panda.html
+++ b/paginas/panda.html
@@ -78,7 +78,7 @@
                     <p>Calificar</p>
                 </div>
                 <div class="item_compartir">
-                    <a href="https://api.whatsapp.com/send?text=[Hola]"><i class="fas fa-share"></i></a>
+                    <a href="https://api.whatsapp.com/send?text=[Clon de Netflix: https://ronalds06.github.io/Netflix-clone/]"><i class="fas fa-share"></i></a>
                     <p>Compartir</p>
                 </div>
             </div>
