--- a/usuario2.html
+++ b/usuario2.html
@@ -127,7 +127,24 @@
                                     </p>
                                     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"><i class="bi bi-x fs-2"></i></button>
                                 </div>
-                                
+                                <div class="botones__canvas bg-dark text-white d-inline-flex justify-content-evenly">
+                                    <div class="ver">
+                                        <div class="ver__btn d-flex align-items-center">
+                                            <i class="bi bi-play-fill fs-2"></i>
+                                            <span class="fw-bolder">Ver</span>
+                                        </div>
+                                    </div>
+                                    <div class="descargar d-flex flex-column">
+                                        <i class="bi bi-download text-center "></i>
+                                        <span class="fw-normal">Descargar</span>
+                                    </div>
+                                    <div class="trailer d-flex flex-column">
+                                        <i class="bi bi-badge-hd text-center "></i>
+                                        <span class="fw-normal">Trailer</span>
+                                    </div>
+                                    
+                                </div>
+
                             </div>
 
                 </div>
